--- a/presentation_report/literature/bibSTA490.bib
+++ b/presentation_report/literature/bibSTA490.bib
@@ -246,8 +246,29 @@ year = {2024}
 
 
 
+@article{breiman2001,
+author = {Breiman, Leo},
+title = {{Random Forests}},
+year = {2001},
+issue_date = {October 1 2001},
+publisher = {Kluwer Academic Publishers},
+address = {USA},
+volume = {45},
+number = {1},
+issn = {0885-6125},
+url = {https://doi.org/10.1023/A:1010933404324},
+doi = {10.1023/A:1010933404324},
+journal = {Machine Learning},
+month = oct,
+pages = {5-32},
+numpages = {28},
+keywords = {classification, ensemble, regression}
+}
+
+
+
 @INPROCEEDINGS{sick2020,
-  author={Sick, Beate and Hathorn, Torsten and D{\"u}rr, Oliver},
+  author={Sick, Beate and Hothorn, Torsten and D{\"u}rr, Oliver},
   booktitle={2020 25th International Conference on Pattern Recognition (ICPR)}, 
   title={Deep transformation models: Tackling complex regression problems with neural network based transformation models}, 
   year={2021},
@@ -260,8 +281,8 @@ year = {2024}
 
 @misc{sick2025,
   author       = {Beate Sick and Oliver D{\"u}rr},
-  title        = {Interpretable Neural Causal Models with TRAM-DAGs},
-  note         = {Accepted at the CLeaR 2025 Conference},
+  title        = {Interpretable Neural Causal Models with {TRAM-DAGs}},
+  note         = {arXiv preprint 2503.16206, accepted at the CLeaR 2025 Conference},
   year         = {2025},
   eprint       = {2503.16206},
   archivePrefix= {arXiv},
@@ -285,6 +306,8 @@ year = {2024}
  year = {2014}
 }
 
+
+
 @misc{chen2025,
       title={Causal Machine Learning Methods for Estimating Personalised Treatment Effects -- Insights on validity from two large trials}, 
       author={Hongruyu Chen and Helena Aebersold and Milo Alan Puhan and Miquel Serra-Burriel},
@@ -292,8 +315,10 @@ year = {2024}
       eprint={2501.04061},
       archivePrefix={arXiv},
       primaryClass={cs.LG},
+  note = {arXiv preprint 2501.04061},
       url={https://arxiv.org/abs/2501.04061}, 
 }
+
 
 
 @article{herzog2023,
